--- a/clases.html
+++ b/clases.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="resumen">
                             <h3>Descripción General:</h3>
-                            <p>
+                            <p class="textAln">
                                 En la clase inaugural de CoderCamp, el enfoque fue el autoconocimiento. Este primer
                                 módulo tiene como objetivo ayudarte a identificar tus puntos fuertes y áreas donde
                                 puedes mejorar, así como a reflexionar sobre tus metas tanto a corto como a largo plazo.
