--- a/clases.html
+++ b/clases.html
@@ -45,7 +45,7 @@
     <main class="container my-5">
         <!-- Slider -->
         <div class="slider">
-            <button class="slider-control prev" onclick="changeSlide(-1)">&#10094;</button>
+            <button class="slider-control sliderLeftArrow prev" onclick="changeSlide(-1)">&#10094;</button>
             <div class="slides">
                 <div class="slide" id="clase1">
                     <div class="slide-content">
@@ -96,7 +96,7 @@
                 </div>
                 <!-- Repite para cada clase -->
             </div>
-            <button class="slider-control next" onclick="changeSlide(1)">&#10095;</button>
+            <button class="slider-control sliderRightArrow next" onclick="changeSlide(1)">&#10095;</button>
         </div>
     </main>
 
