Inicio y Clases completos

--- a/index.html
+++ b/index.html
@@ -85,43 +85,62 @@
                 <h3 class="text-accent">
                     <h3 class="text-accent"><a href="clases.html#clase1">Clase 1: Introducción al mercado laboral</a>
                     </h3>
-                    <p>Detalles, objetivos, alcances y reflexiones personales.</p>
+                    <p>Martes, 6 de agosto del 2024</p>
+                    <p><strong>Comentario Destacado:</strong> "La primera impresión en el mercado laboral es crucial
+                        para tu éxito
+                        futuro."</p>
             </div>
             <div id="clase2" class="mb-4">
                 <h3 class="text-accent">
-                    <a href="#clase2">Clase 2: Autoconocimiento de skills</a>
+                    <a href="clases.html#clase2">Clase 2: Autoconocimiento de skills</a>
                 </h3>
-                <p>Detalles, objetivos, alcances y reflexiones personales.</p>
+                <p>Jueves, 8 de agosto del 2024</p>
+                <p><strong>Cita Inspiradora:</strong> "El autoconocimiento es la base sobre la que se construyen todos
+                    los grandes
+                    logros."</p>
             </div>
             <div id="clase3" class="mb-4">
                 <h3 class="text-accent">
-                    <a href="#clase3">Clase 3: Técnicas de búsqueda de empleo</a>
+                    <a href="clases.html#clase3">Clase 3: Técnicas de búsqueda de empleo</a>
                 </h3>
-                <p>Detalles, objetivos, alcances y reflexiones personales.</p>
+                <p>Martes, 13 de agosto del 2024</p>
+                <p><strong>Reflexión Personal:</strong> "Definir tu marca personal es el primer paso para destacar en un
+                    mar de
+                    profesionales."</p>
             </div>
             <div id="clase4" class="mb-4">
                 <h3 class="text-accent">
-                    <a href="#clase4">Clase 4: Creación de un portafolio profesional</a>
+                    <a href="clases.html#clase4">Clase 4: Creación de un portafolio profesional</a>
                 </h3>
-                <p>Detalles, objetivos, alcances y reflexiones personales.</p>
+                <p>Jueves, 15 de agosto del 2024
+                <p><strong>Recomendación:</strong> "Optimiza tu CV para cada oferta de empleo, destacando las
+                    habilidades más relevantes."</p>
             </div>
             <div id="clase5" class="mb-4">
                 <h3 class="text-accent">
-                    <a href="#clase5">Clase 5: Estrategias de networking</a>
+                    <a href="clases.html#clase5">Clase 5: Estrategias de networking</a>
                 </h3>
-                <p>Detalles, objetivos, alcances y reflexiones personales.</p>
+                <p>Martes, 20 de agosto del 2024</p>
+                <p><strong>Pregunta Reflexiva al lector:</strong> "¿Qué habilidades blandas te gustaría mejorar para tu
+                    próxima
+                    entrevista?"</p>
             </div>
             <div id="clase6" class="mb-4">
                 <h3 class="text-accent">
-                    <a href="#clase6">Clase 6: Preparación para entrevistas</a>
+                    <a href="clases.html#clase6">Clase 6: Preparación para entrevistas</a>
                 </h3>
-                <p>Detalles, objetivos, alcances y reflexiones personales.</p>
+                <p>Jueves, 22 de agosto del 2024</p>
+                <p><strong>Testimonio:</strong> "Los recursos adicionales hicieron una gran diferencia en mi
+                    preparación."</p>
             </div>
             <div id="clase7" class="mb-4">
                 <h3 class="text-accent">
-                    <a href="#clase7">Clase 7: Desarrollo de habilidades blandas</a>
+                    <a href="clases.html#clase7">Clase 7: Desarrollo de habilidades blandas</a>
                 </h3>
-                <p>Detalles, objetivos, alcances y reflexiones personales.</p>
+                <p>Martes, 27 de agosto del 2024</p>
+                <p><strong>Reflexión Personal:</strong> "Prepararse para entrevistas técnicas requiere práctica y una
+                    comprensión
+                    profunda de los conceptos."</p>
             </div>
         </section>
 
