inicio, clases y recursos completo

--- a/clases.html
+++ b/clases.html
@@ -57,9 +57,11 @@
                         </div>
                         <div class="host-invitados">
                             <h3>Presentador:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/nahuellema/" target="_blank">Nahuel Lema <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/nahuellema/" target="_blank">Nahuel
+                                    Lema <i class="fab fa-linkedin"></i></a></p>
                             <h3>Speaker Invitado:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/alan-gosiker/" target="_blank">Alan Gosiker <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/alan-gosiker/" target="_blank">Alan
+                                    Gosiker <i class="fab fa-linkedin"></i></a></p>
                         </div>
                         <div class="resumen">
                             <h3>Descripción General:</h3>
@@ -97,9 +99,11 @@
                         </div>
                         <div class="host-invitados">
                             <h3>Presentador:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/nahuellema/" target="_blank">Nahuel Lema <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/nahuellema/" target="_blank">Nahuel
+                                    Lema <i class="fab fa-linkedin"></i></a></p>
                             <h3>Speaker Invitada:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/ro-trevisan/" target="_blank">Rocío Trevisan <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/ro-trevisan/" target="_blank">Rocío
+                                    Trevisan <i class="fab fa-linkedin"></i></a></p>
                             <h3>Invitada:</h3>
                             <p>Cami Tejeiro</p>
                         </div>
@@ -142,9 +146,11 @@
                         </div>
                         <div class="host-invitados">
                             <h3>Presentador:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/nahuellema/" target="_blank">Nahuel Lema <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/nahuellema/" target="_blank">Nahuel
+                                    Lema <i class="fab fa-linkedin"></i></a></p>
                             <h3>Speaker Invitada:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/carolancelotti" target="_blank">Carolina
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/carolancelotti"
+                                    target="_blank">Carolina
                                     Ancelotti <i class="fab fa-linkedin"></i></a></p>
                         </div>
                         <div class="resumen">
@@ -185,12 +191,15 @@
                         </div>
                         <div class="host-invitados">
                             <h3>Presentador:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/nahuellema/" target="_blank">Nahuel Lema <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/nahuellema/" target="_blank">Nahuel
+                                    Lema <i class="fab fa-linkedin"></i></a></p>
                             <h3>Speaker Invitada:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/celibs/" target="_blank">Celina Bueno Solórzano <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/celibs/" target="_blank">Celina Bueno
+                                    Solórzano <i class="fab fa-linkedin"></i></a></p>
                             </p>
                             <h3>Invitado Especial:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/csluduena/" target="_blank">Sebastián Ludueña</a> <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/csluduena/" target="_blank">Sebastián
+                                    Ludueña</a> <i class="fab fa-linkedin"></i></a></p>
                             </p>
                         </div>
                         <div class="resumen">
@@ -231,9 +240,11 @@
                             <p class="hovIn"><a href="https://www.linkedin.com/in/segundo-d-augerot-b6727223b/"
                                     target="_blank">Segundo D'Augerot</a></p>
                             <h3>Speaker Invitada:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/camila-luis/" target="_blank">Camila Luis <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/camila-luis/" target="_blank">Camila
+                                    Luis <i class="fab fa-linkedin"></i></a></p>
                             <h3>Invitada Especial:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/juanazabaleta/" target="_blank">Juana Zabaleta <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/juanazabaleta/" target="_blank">Juana
+                                    Zabaleta <i class="fab fa-linkedin"></i></a></p>
                         </div>
                         <div class="resumen">
                             <h3>Descripción General:</h3>
@@ -272,10 +283,13 @@
                         </div>
                         <div class="host-invitados">
                             <h3>Presentador:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/segundo-d-augerot-b6727223b/" target="_blank">Segundo D'Augerot <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/segundo-d-augerot-b6727223b/"
+                                    target="_blank">Segundo D'Augerot <i class="fab fa-linkedin"></i></a></p>
                             <h3>Speakers:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/johanna-dzikowsky-59546b58/" target="_blank">Johanna Dzikowsky <i class="fab fa-linkedin"></i></a></p>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/rosangie-chirino/" target="_blank">Rosangie Chirino <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/johanna-dzikowsky-59546b58/"
+                                    target="_blank">Johanna Dzikowsky <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/rosangie-chirino/"
+                                    target="_blank">Rosangie Chirino <i class="fab fa-linkedin"></i></a></p>
                         </div>
                         <div class="resumen">
                             <h3>Descripción General:</h3>
@@ -317,11 +331,15 @@
                         </div>
                         <div class="host-invitados">
                             <h3>Presentador:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/nicolas-seguro/" target="_blank">Nicolas Seguro <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/nicolas-seguro/"
+                                    target="_blank">Nicolas Seguro <i class="fab fa-linkedin"></i></a></p>
                             <h3>Speakers:</h3>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/jdcaruso/" target="_blank">Javier Caruso <i class="fab fa-linkedin"></i></a></p>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/razparren/" target="_blank">Rocío Azparren <i class="fab fa-linkedin"></i></a></p>
-                            <p class="hovIn"><a href="https://www.linkedin.com/in/alma-canzian-47051814a/" target="_blank">Alma Canzian <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/jdcaruso/" target="_blank">Javier
+                                    Caruso <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/razparren/" target="_blank">Rocío
+                                    Azparren <i class="fab fa-linkedin"></i></a></p>
+                            <p class="hovIn"><a href="https://www.linkedin.com/in/alma-canzian-47051814a/"
+                                    target="_blank">Alma Canzian <i class="fab fa-linkedin"></i></a></p>
                         </div>
                         <div class="resumen">
                             <h3>Descripción General:</h3>
@@ -351,8 +369,7 @@
                             </ul>
                         </div>
                         <div class="event-final">
-                            <h3>Próximo Evento:</h3>
-                            <p><strong>Evento Final:</strong> "Cierre de Temporada de CoderCamp" - Sábado, 31 de agosto
+                            <h3><strong class="clV">Próximo Evento:</strong></h3> <p>"Cierre de Temporada de CoderCamp" - Sábado, 31 de agosto
                                 (Presencial).</p>
                         </div>
                     </div>
@@ -376,6 +393,7 @@
                 <a href="https://csluduena.com.ar/" target="_blank" class="social-icon ponter website">Website</a>
                 <a href="https://drive.google.com/file/d/1aDjvPs7tI-KOllk5B9mq11F3yQmAB1SF/view" target="_blank"
                     class="social-icon cv">Get my CV</a>
+                <a href="mailto:csluduena@gmail.com" class="social-icon email">Email</a>
             </div>
             <p>© 2024 CoderCamp 1° Edition</p>
         </div>
@@ -384,9 +402,6 @@
     <!-- Scripts -->
     <script src="js/scripts.js"></script>
     <script src="js/slide.js"></script>
-    <script>
-
-    </script>
 </body>
 
 </html>
