--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="container">
             <h1 class="display-4">Mi Experiencia en #CoderCamp</h1>
-            <p class="lead">Por Carlos Sebastián Ludueña</p>
+            <p class="lead">Por<strong> Carlos Sebastián Ludueña</strong></p>
         </div>
     </header>
 
@@ -79,77 +79,94 @@
             </p>
         </section>
 
-        <section id="clases">
+        <section class="FlexBody1" id="clases">
             <h2 class="text-primary">Resumen de Clases</h2>
-            <div id="clase1" class="mb-4">
-                <h3 class="text-accent">
-                    <h3 class="text-accent"><a href="clases.html#clase1">Clase 1: Introducción al mercado laboral</a>
-                    </h3>
+
+            <a href="clases.html#clase1" class="efectoShw">
+                <div id="clase1" class="mb-4">
+                    <h3 class="text-accent">Clase 1: Introducción al mercado laboral</h3>
                     <p>Martes, 6 de agosto del 2024</p>
                     <p><strong>Comentario Destacado:</strong> "La primera impresión en el mercado laboral es crucial
-                        para tu éxito
-                        futuro."</p>
-            </div>
-            <div id="clase2" class="mb-4">
-                <h3 class="text-accent">
-                    <a href="clases.html#clase2">Clase 2: Autoconocimiento de skills</a>
-                </h3>
-                <p>Jueves, 8 de agosto del 2024</p>
-                <p><strong>Cita Inspiradora:</strong> "El autoconocimiento es la base sobre la que se construyen todos
-                    los grandes
-                    logros."</p>
-            </div>
-            <div id="clase3" class="mb-4">
-                <h3 class="text-accent">
-                    <a href="clases.html#clase3">Clase 3: Técnicas de búsqueda de empleo</a>
-                </h3>
-                <p>Martes, 13 de agosto del 2024</p>
-                <p><strong>Reflexión Personal:</strong> "Definir tu marca personal es el primer paso para destacar en un
-                    mar de
-                    profesionales."</p>
-            </div>
-            <div id="clase4" class="mb-4">
-                <h3 class="text-accent">
-                    <a href="clases.html#clase4">Clase 4: Creación de un portafolio profesional</a>
-                </h3>
-                <p>Jueves, 15 de agosto del 2024
-                <p><strong>Recomendación:</strong> "Optimiza tu CV para cada oferta de empleo, destacando las
-                    habilidades más relevantes."</p>
-            </div>
-            <div id="clase5" class="mb-4">
-                <h3 class="text-accent">
-                    <a href="clases.html#clase5">Clase 5: Estrategias de networking</a>
-                </h3>
-                <p>Martes, 20 de agosto del 2024</p>
-                <p><strong>Pregunta Reflexiva al lector:</strong> "¿Qué habilidades blandas te gustaría mejorar para tu
-                    próxima
-                    entrevista?"</p>
-            </div>
-            <div id="clase6" class="mb-4">
-                <h3 class="text-accent">
-                    <a href="clases.html#clase6">Clase 6: Preparación para entrevistas</a>
-                </h3>
-                <p>Jueves, 22 de agosto del 2024</p>
-                <p><strong>Testimonio:</strong> "Los recursos adicionales hicieron una gran diferencia en mi
-                    preparación."</p>
-            </div>
-            <div id="clase7" class="mb-4">
-                <h3 class="text-accent">
-                    <a href="clases.html#clase7">Clase 7: Desarrollo de habilidades blandas</a>
-                </h3>
-                <p>Martes, 27 de agosto del 2024</p>
-                <p><strong>Reflexión Personal:</strong> "Prepararse para entrevistas técnicas requiere práctica y una
-                    comprensión
-                    profunda de los conceptos."</p>
-            </div>
+                        para tu éxito futuro."</p>
+                </div>
+            </a>
+
+            <a href="clases.html#clase2" class="efectoShw">
+                <div id="clase2" class="mb-4 rigP">
+                    <h3 class="text-accent">Clase 2: Autoconocimiento de skills</h3>
+                    <p>Jueves, 8 de agosto del 2024</p>
+                    <p><strong>Cita Inspiradora:</strong> "El autoconocimiento es la base sobre la que se construyen
+                        todos
+                        los grandes logros."</p>
+                </div>
+            </a>
+
+            <a href="clases.html#clase3" class="efectoShw">
+                <div id="clase3" class="mb-4">
+                    <h3 class="text-accent">Clase 3: Técnicas de búsqueda de empleo</h3>
+                    <p>Martes, 13 de agosto del 2024</p>
+                    <p><strong>Reflexión Personal:</strong> "Definir tu marca personal es el primer paso para destacar
+                        en un
+                        mar de profesionales."</p>
+                </div>
+            </a>
+
+            <a href="clases.html#clase4" class="efectoShw">
+                <div id="clase4" class="mb-4 rigP">
+                    <h3 class="text-accent">Clase 4: Creación de un portafolio profesional</h3>
+                    <p>Jueves, 15 de agosto del 2024</p>
+                    <p><strong>Recomendación:</strong> "Optimiza tu CV para cada oferta de empleo, destacando las
+                        habilidades más relevantes."</p>
+                </div>
+            </a>
+
+            <a href="clases.html#clase5" class="efectoShw">
+                <div id="clase5" class="mb-4">
+                    <h3 class="text-accent">Clase 5: Estrategias de networking</h3>
+                    <p>Martes, 20 de agosto del 2024</p>
+                    <p><strong>Pregunta Reflexiva al lector:</strong> "¿Qué habilidades blandas te gustaría mejorar para
+                        tu
+                        próxima entrevista?"</p>
+                </div>
+            </a>
+
+            <a href="clases.html#clase6" class="efectoShw">
+                <div id="clase6" class="mb-4 rigP">
+                    <h3 class="text-accent">Clase 6: Preparación para entrevistas</h3>
+                    <p>Jueves, 22 de agosto del 2024</p>
+                    <p><strong>Testimonio:</strong> "Los recursos adicionales hicieron una gran diferencia en mi
+                        preparación."</p>
+                </div>
+            </a>
+
+            <a href="clases.html#clase7" class="efectoShw">
+                <div id="clase7" class="mb-4">
+                    <h3 class="text-accent">Clase 7: Desarrollo de habilidades blandas</h3>
+                    <p>Martes, 27 de agosto del 2024</p>
+                    <p><strong>Reflexión Personal:</strong> "Prepararse para entrevistas técnicas requiere práctica y
+                        una
+                        comprensión profunda de los conceptos."</p>
+                </div>
+            </a>
         </section>
+
 
     </main>
 
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 CoderCamp. Todos los derechos reservados.</p>
+            <p>Conecta conmigo:</p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/csluduena/" target="_blank"
+                    class="social-icon linkedin">LinkedIn</a>
+                <a href="https://github.com/csluduena" target="_blank" class="social-icon ponter github">GitHub</a>
+                <a href="https://csluduena.com.ar/" target="_blank" class="social-icon ponter website">Website</a>
+                <a href="https://drive.google.com/file/d/1aDjvPs7tI-KOllk5B9mq11F3yQmAB1SF/view" target="_blank"
+                    class="social-icon cv">Get my CV</a>
+                <a href="mailto:csluduena@gmail.com" class="social-icon email">Email</a>
+            </div>
+            <p>© 2024 CoderCamp 1° Edition</p>
         </div>
     </footer>
 
