--- a/clases.html
+++ b/clases.html
@@ -19,24 +19,27 @@
     <header class="header">
         <div class="container">
             <h1 class="display-4">Resumen de Clases #CoderCamp</h1>
+            <p class="lead">Por <strong>Carlos Sebastián Ludueña</strong></p>
         </div>
     </header>
 
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container">
-            <button class="navbar-toggler" onclick="toggleNavbar()">☰</button>
-            <a class="navbar-brand" href="#" onclick="toggleNavbar()">CoderCamp</a>
-            <div id="navbarNav" class="navbar-nav">
-                <ul>
+            <a class="navbar-brand keychainify-checked" href="coderCamp.html">#CoderCamp</a>
+            <div class="navbar-nav">
+                <ul class="mveLft">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link keychainify-checked" href="coderCamp.html">└─ Inicio</a> /
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="recursos.html">Recursos</a>
+                        <a class="nav-link keychainify-checked" href="clases.html">Clases</a> /
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="comentarios.html">Comentarios</a>
+                        <a class="nav-link keychainify-checked" href="recursos.html">Recursos</a> /
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link keychainify-checked" href="myjourney.html">My Journey</a> /
                     </li>
                 </ul>
             </div>
@@ -369,7 +372,8 @@
                             </ul>
                         </div>
                         <div class="event-final">
-                            <h3><strong class="clV">Próximo Evento:</strong></h3> <p>"Cierre de Temporada de CoderCamp" - Sábado, 31 de agosto
+                            <h3><strong class="clV">Próximo Evento:</strong></h3>
+                            <p>"Cierre de Temporada de CoderCamp" - Sábado, 31 de agosto
                                 (Presencial).</p>
                         </div>
                     </div>
@@ -385,17 +389,17 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>Conecta conmigo:</p>
+            <p class="clrOs2 botUp">Conecta conmigo:</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/csluduena/" target="_blank"
                     class="social-icon linkedin">LinkedIn</a>
                 <a href="https://github.com/csluduena" target="_blank" class="social-icon ponter github">GitHub</a>
                 <a href="https://csluduena.com.ar/" target="_blank" class="social-icon ponter website">Website</a>
                 <a href="https://drive.google.com/file/d/1aDjvPs7tI-KOllk5B9mq11F3yQmAB1SF/view" target="_blank"
-                    class="social-icon cv">Get my CV</a>
+                    class="social-icon cv">Descargar mi CV</a>
                 <a href="mailto:csluduena@gmail.com" class="social-icon email">Email</a>
             </div>
-            <p>© 2024 CoderCamp 1° Edition</p>
+            <p class="clrOs2 boDo">&copy; 2024 Carlos Sebastián Ludueña</p>
         </div>
     </footer>
 
