--- a/coderCamp.html
+++ b/coderCamp.html
@@ -5,10 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoderCamp - Resumen de Clases</title>
+    <meta name="description"
+        content="Descubre el resumen de clases en #CoderCamp, una plataforma de aprendizaje dirigida por Carlos Sebastián Ludueña. Aprende sobre nuestras clases y recursos.">
+    <meta name="keywords" content="CoderCamp, clases, resumen de clases, recursos educativos, Carlos Sebastián Ludueña">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="CoderCamp - Resumen de Clases">
+    <meta property="og:description"
+        content="Descubre el resumen de clases en #CoderCamp, una plataforma de aprendizaje dirigida por Carlos Sebastián Ludueña. Aprende sobre nuestras clases y recursos.">
+    <meta property="og:image" content="./img/coderCamp.png">
+    <meta property="og:url" content="http://csluduena.com.ar">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="CoderCamp - Resumen de Clases">
+    <meta name="twitter:description"
+        content="Descubre el resumen de clases en #CoderCamp, una plataforma de aprendizaje dirigida por Carlos Sebastián Ludueña. Aprende sobre nuestras clases y recursos.">
+    <meta name="twitter:image" content="./">
+
+    <!-- Schema Markup -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Resumen de Clases - CoderCamp",
+        "description": "Descubre el resumen de clases en #CoderCamp, una plataforma de aprendizaje dirigida por Carlos Sebastián Ludueña.",
+        "url": "http://csluduena.com.ar"
+    }
+    </script>
+
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" href="./img/coderCamp.png" type="image/x-icon">
 </head>
 
 <body>
@@ -23,21 +56,20 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container">
-            <button class="navbar-toggler" onclick="toggleNavbar()">☰</button>
-            <a class="navbar-brand" href="#" onclick="toggleNavbar()">CoderCamp</a>
-            <div id="navbarNav" class="navbar-nav">
-                <ul>
+            <a class="navbar-brand keychainify-checked" href="coderCamp.html">#CoderCamp</a>
+            <div class="navbar-nav">
+                <ul class="mveLft">
                     <li class="nav-item">
-                        <a class="nav-link" href="#introduccion">Introducción</a>
+                        <a class="nav-link keychainify-checked" href="coderCamp.html">└─ Inicio</a> /
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="clases.html">Clases</a>
+                        <a class="nav-link keychainify-checked" href="clases.html">Clases</a> /
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="recursos.html">Recursos</a>
+                        <a class="nav-link keychainify-checked" href="recursos.html">Recursos</a> /
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="comentarios.html">Comentarios</a>
+                        <a class="nav-link keychainify-checked" href="myjourney.html">My Journey</a> /
                     </li>
                 </ul>
             </div>
@@ -150,23 +182,22 @@
             </a>
         </section>
 
-
     </main>
 
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>Conecta conmigo:</p>
+            <p class="clrOs2 botUp">Conecta conmigo:</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/csluduena/" target="_blank"
                     class="social-icon linkedin">LinkedIn</a>
                 <a href="https://github.com/csluduena" target="_blank" class="social-icon ponter github">GitHub</a>
                 <a href="https://csluduena.com.ar/" target="_blank" class="social-icon ponter website">Website</a>
                 <a href="https://drive.google.com/file/d/1aDjvPs7tI-KOllk5B9mq11F3yQmAB1SF/view" target="_blank"
-                    class="social-icon cv">Get my CV</a>
+                    class="social-icon cv">Descargar mi CV</a>
                 <a href="mailto:csluduena@gmail.com" class="social-icon email">Email</a>
             </div>
-            <p>© 2024 CoderCamp 1° Edition</p>
+            <p class="clrOs2 boDo">&copy; 2024 Carlos Sebastián Ludueña</p>
         </div>
     </footer>
 
