--- a/myjourney.html
+++ b/myjourney.html
@@ -43,11 +43,11 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container">
-            <a class="navbar-brand keychainify-checked" href="coderCamp.html">#CoderCamp</a>
+            <a class="navbar-brand keychainify-checked" href="index.html">#CoderCamp</a>
             <div class="navbar-nav">
                 <ul class="mveLft">
                     <li class="nav-item"> 
-                        <a class="nav-link keychainify-checked" href="coderCamp.html">└─  Inicio</a> /
+                        <a class="nav-link keychainify-checked" href="index.html">└─  Inicio</a> /
                     </li>
                     <li class="nav-item">
                         <a class="nav-link keychainify-checked" href="clases.html">Clases</a> /
