--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
                     class="social-icon cv">Descargar mi CV</a>
                 <a href="mailto:csluduena@gmail.com" class="social-icon email">Email</a>
             </div>
-            <p class="clrOs2 boDo">&copy; 2024 Carlos Sebastián Ludueña</p>
+            <p class="clrOs2 boDo">&copy; 2024 Carlos Sebastián Ludueña | Frontend React Js | Estudiante de Backend Node
+                JS en Coderhouse </p>
         </div>
     </footer>
 
